<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="activity_main_title">Main</string>
    <string name="activity_main_button_label_common_controls">Controls</string>
    <string name="activity_main_button_label_customized_controls">Customized Views</string>
    <string name="activity_main_button_label_dialogs">Dialogs</string>
    <string name="activity_main_button_label_list_view">List View</string>
    <string name="activity_commoncontrols_title">Common Controls</string>
    <string name="activity_dialog_title">Demo Dialog</string>
    <string name="activity_dialog_button_label_okcancel">Dialog OK Cancel</string>
    <string name="activity_dialog_button_label_multiplebuttons">Dialog Multiple Buttons</string>
    <string name="activity_dialog_button_label_list">Dialog List</string>
    <string name="activity_dialog_button_label_progress">Dialog Progress</string>
    <string name="activity_dialog_button_label_singleoption">Dialog Single Option</string>
    <string name="activity_dialog_button_label_multipleoptions">Dialog Multiple Options</string>
    <string name="activity_dialog_button_label_customize">Dialog Customized</string>
    <string name="activity_dialog_button_label_readprogress">Dialog Read Progress</string>
    <string name="activity_customizedcontrols_title">Demo Customize Controls</string>
    <string name="activity_customizedcontrols_font_title">Draw Font</string>
    <string name="activity_customizedcontrols_unrule_title">Draw UnRule</string>
    <string name="activity_customizedcontrols_play_title">Play</string>
    <string name="activity_customizedcontrols_button_label_drawstring">Draw String</string>
    <string name="activity_customizedcontrols_button_label_drawunrule">Draw UnRule</string>
    <string name="activity_customizedcontrols_button_label_drawpicture">Draw Picture</string>
    <string name="activity_customizedcontrols_button_label_play">Draw Play</string>
    <string name="activity_customizedcontrols_drawpicture_title">Draw Picture</string>
    <string name="activity_customizedcontrols_drawpicture_button_label_move_to_left">Move to Left</string>
    <string name="activity_customizedcontrols_drawpicture_button_label_move_to_right">Move to Right</string>
    <string name="activity_customizedcontrols_drawpicture_button_label_left_turn">Left turn</string>
    <string name="activity_customizedcontrols_drawpicture_button_label_right_turn">Right turn</string>
    <string name="activity_customizedcontrols_drawpicture_button_label_minsize">Minsize</string>
    <string name="activity_customizedcontrols_drawpicture_button_label_maxsize">MaxSize</string>
    <string name="activity_listview_title">List View</string>
    <string name="activity_listview_simple_title">Simple List View</string>
    <string name="activity_listview_header_title">Header List</string>
    <string name="activity_listview_baseadapter_title">Customize Base Adapter List View</string>
    <string name="activity_listview_button_label_simple">Simple List View</string>
    <string name="activity_listview_button_label_header">Header List View</string>
    <string name="activity_listview_button_label_baseadapter">Base Adapter</string>
    <string name="activity_datastore_title">Data Store</string>
    <string name="activity_main_button_label_datastore">Data Store</string>
    <string name="activity_datastore_button_label_sharedpreferences">Shared Preferences</string>
    <string name="activity_datastore_button_label_localdata">Local Data</string>
    <string name="activity_datastore_button_label_localres">Local Res</string>
    <string name="activity_datastore_button_label_sdcard">SD Card</string>
    <string name="activity_datastore_sharedpreferences_title">Shared Preferences</string>
    <string name="activity_datastore_sharedpreferences_label_name">Input Name:</string>
    <string name="activity_datastore_sharedpreferences_button_label_savedata">Save Data</string>
    <string name="activity_datastore_sharedpreferences_button_label_displaydata">Display Data</string>
    <string name="activity_datastore_sharedpreferences_button_label_deletedata">Delete Data</string>
    <string name="activity_datastore_sharedpreferences_button_label_deletefile">Delete SharePreferences File</string>

</resources>