<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.ale.learning.MainActivity" >

    <Button
        android:id="@+id/btnCustomizedControlsDrawString"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/activity_customizedcontrols_button_label_drawstring" />
    
    <Button
        android:id="@+id/btnCustomizedControlsDrawUnRule"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/activity_customizedcontrols_button_label_drawunrule" />
    
    <Button
        android:id="@+id/btnCustomizedControlsDrawPicture"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/activity_customizedcontrols_button_label_drawpicture" />
    
    <Button
        android:id="@+id/btnCustomizedControlsPlay"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/activity_customizedcontrols_button_label_play" />
</LinearLayout>